[workspace]
members = [
    "crates/sys/hacl",
    "crates/sys/libjade",
    "crates/sys/platform",
    "crates/sys/pqclean",
    "crates/sys/lib25519",
    "benchmarks",
    "fuzz",
    "libcrux-ml-kem",
    "libcrux-ml-kem/fuzz",
    "crates/algorithms/sha3",
    "crates/utils/intrinsics",
    "libcrux-kem",
    "crates/algorithms/hmac",
    "libcrux-ecdh",
    "libcrux-psq",
    "crates/utils/macros",
    "cavp",
    "traits",
    "crates/algorithms/sha2",
    "crates/algorithms/ed25519",
    "crates/algorithms/curve25519",
    "crates/algorithms/poly1305",
    "crates/algorithms/chacha20poly1305",
    "crates/algorithms/rsa",
    "crates/algorithms/ecdsa",
    "crates/algorithms/p256",
    "crates/algorithms/blake2",
    "crates/algorithms/ml-dsa",
    "crates/utils/secrets",
    "crates/utils/core-models",
    "crates/utils/test-utils",
    "crates/algorithms/hkdf",
    "crates/primitives/aead",
    "crates/primitives/digest",
    "crates/testing/kats",
    "crates/algorithms/aesgcm",
    "crates/algorithms/aesgcm/fuzz",
    "crates/utils/hacl-rs",
]

[workspace.package]
version = "0.0.2"
authors = ["Cryspen"]
license = "Apache-2.0"
homepage = "https://github.com/cryspen/libcrux"
edition = "2021"
repository = "https://github.com/cryspen/libcrux"
readme = "Readme.md"

[workspace.metadata.release]
allow-branch = ["main"]

[workspace.dependencies]
hax-lib = { version = "=0.3.6" }
libcrux-intrinsics = { version = "=0.0.5", path = "crates/utils/intrinsics" }
libcrux-aesgcm = { version = "=0.0.6", path = "crates/algorithms/aesgcm" }
libcrux-chacha20poly1305 = { version = "=0.0.5", path = "crates/algorithms/chacha20poly1305" }
libcrux-traits = { version = "=0.0.5", path = "traits" }
libcrux-hacl-rs = { version = "=0.0.4", path = "crates/utils/hacl-rs" }
libcrux-macros = { version = "=0.0.3", path = "crates/utils/macros" }
libcrux-hacl = { version = "=0.0.2", path = "crates/sys/hacl" }
libcrux-platform = { version = "=0.0.3", path = "crates/sys/platform" }
libcrux-hkdf = { version = "=0.0.5", path = "crates/algorithms/hkdf" }
libcrux-hmac = { version = "=0.0.5", path = "crates/algorithms/hmac" }
libcrux-sha2 = { version = "=0.0.5", path = "crates/algorithms/sha2" }
libcrux-ed25519 = { version = "=0.0.5", path = "crates/algorithms/ed25519" }
libcrux-ecdh = { version = "=0.0.5", path = "libcrux-ecdh" }
libcrux-ml-kem = { version = "=0.0.6", path = "libcrux-ml-kem" }
libcrux-sha3 = { version = "=0.0.6", path = "crates/algorithms/sha3" }
libcrux-kem = { version = "=0.0.5", path = "libcrux-kem" }
libcrux-secrets = { version = "=0.0.5", path = "crates/utils/secrets" }
libcrux-aead = { version = "=0.0.5", path = "crates/primitives/aead" }
libcrux-blake2 = { version = "=0.0.5", path = "crates/algorithms/blake2" }
libcrux-p256 = { version = "=0.0.5", path = "crates/algorithms/p256" }

[package]
name = "libcrux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/libcrux/"
description = "The Formally Verified Cryptography Library"
exclude = [
    "/tests",
    "/specs",
    "/proofs",
    "/*.py",
    "/wasm-demo",
    "/fuzz",
    "/git-hooks",
    "/architecture",
    "/libcrux.fst.config.json",
]

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
bench = false                               # so libtest doesn't eat the arguments for criterion

[build-dependencies]
libcrux-platform = { version = "=0.0.3", path = "crates/sys/platform" }

[dependencies]
libcrux-hacl-rs.workspace = true
libcrux-chacha20poly1305.workspace = true
libcrux-ml-kem.workspace = true
libcrux-traits.workspace = true
libcrux-hacl.workspace = true
libcrux-platform.workspace = true
libcrux-hkdf.workspace = true
libcrux-hmac.workspace = true
libcrux-sha2.workspace = true
libcrux-ed25519.workspace = true
libcrux-ecdh.workspace = true
libcrux-kem.workspace = true

rand = { version = "0.9" }
log = { version = "0.4", optional = true }

# WASM API
wasm-bindgen = { version = "0.2.87", optional = true }
getrandom = { version = "0.3", optional = true }

# Proofs
hax-lib.workspace = true

[dev-dependencies]
libcrux = { path = ".", features = ["rand", "tests"] }
pretty_env_logger = "0.5"
rand = { version = "0.9" }
rand_core = { version = "0.9" }
quickcheck = "1"
quickcheck_macros = "1"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
wycheproof = "0.6.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.3" }

[features]
default = ["std"]
std = []
hacspec = []                         # TODO: #7 Use specs instead of efficient implementations
rand = []
wasm = ["wasm-bindgen", "getrandom"]
log = ["dep:log"]
tests = []                           # Expose functions for testing.
experimental = []                    # Expose experimental APIs.

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# XXX: Not needed anymore, but nice for test speed
# [profile.dev.package."libcrux-ml-dsa"]
# opt-level = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(libjade)',
    'cfg(simd128)',
    'cfg(simd256)',
    'cfg(aes_ni)',
] }
