[package]
name = "libcrux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/libcrux/"
description = "The Formally Verified Cryptography Library"
exclude = [
    "/tests",
    "/specs",
    "/proofs",
    "/*.py",
    "/wasm-demo",
    "/fuzz",
    "/git-hooks",
    "/architecture",
    "/libcrux.fst.config.json",
]

[workspace]
members = [
    "benchmarks",
    "cavp",
    "crates/algorithms/aesgcm",
    "crates/algorithms/blake2",
    "crates/algorithms/aesgcm/fuzz",
    "crates/algorithms/chacha20poly1305",
    "crates/algorithms/curve25519",
    "crates/algorithms/ecdsa",
    "crates/algorithms/ed25519",
    "crates/algorithms/hkdf",
    "crates/algorithms/hmac",
    "crates/algorithms/p256",
    "crates/algorithms/poly1305",
    "crates/algorithms/rsa",
    "crates/algorithms/sha2",
    "crates/algorithms/sha3",
    "crates/primitives/aead",
    "crates/primitives/digest",
    "crates/sys/hacl",
    "crates/sys/lib25519",
    "crates/sys/libjade",
    "crates/sys/platform",
    "crates/sys/pqclean",
    "crates/testing/kats",
    "crates/utils/core-models",
    "crates/utils/hacl-rs",
    "crates/utils/intrinsics",
    "crates/utils/macros",
    "crates/utils/secrets",
    "crates/utils/test-utils",
    "libcrux-ecdh",
    "libcrux-kem",
    "libcrux-ml-dsa",
    "libcrux-ml-kem",
    "libcrux-ml-kem/fuzz",
    "libcrux-psq",
    "traits",
]
resolver = "2"

[workspace.package]
version = "0.0.2"
authors = ["Cryspen"]
license = "Apache-2.0"
homepage = "https://github.com/cryspen/libcrux"
edition = "2021"
repository = "https://github.com/cryspen/libcrux"
readme = "Readme.md"

[workspace.metadata.release]
allow-branch = ["main"]

[workspace.dependencies]
hax-lib = { version = "=0.3.6" }
libcrux-aead = { version = "=0.0.6", path = "crates/primitives/aead" }
libcrux-aesgcm = { version = "=0.0.7", path = "crates/algorithms/aesgcm" }
libcrux-blake2 = { version = "=0.0.6", path = "crates/algorithms/blake2" }
libcrux-chacha20poly1305 = { version = "=0.0.6", path = "crates/algorithms/chacha20poly1305" }
libcrux-curve25519 = { version = "=0.0.6", path = "crates/algorithms/curve25519", default-features = false }
libcrux-digest = { version = "=0.0.6", path = "crates/primitives/digest" }

# For the crates below it is necessary to set `default-features = true`
# in workspace crates that depend on the default feature set.
libcrux-ecdh = { version = "=0.0.6", path = "libcrux-ecdh", default-features = false }
libcrux-ecdsa = { version = "=0.0.6", path = "crates/algorithms/ecdsa" }
libcrux-ed25519 = { version = "=0.0.6", path = "crates/algorithms/ed25519" }
libcrux-hacl = { version = "=0.0.2", path = "crates/sys/hacl" }
libcrux-hacl-rs = { version = "=0.0.4", path = "crates/utils/hacl-rs" }
libcrux-hkdf = { version = "=0.0.6", path = "crates/algorithms/hkdf" }
libcrux-hmac = { version = "=0.0.6", path = "crates/algorithms/hmac" }
libcrux-intrinsics = { version = "=0.0.6", path = "crates/utils/intrinsics" }

# Test utilities
libcrux-kats = { version = "=0.0.3", path = "crates/testing/kats" }
libcrux-kem = { version = "=0.0.6", path = "libcrux-kem" }
libcrux-macros = { version = "=0.0.3", path = "crates/utils/macros" }
libcrux-ml-dsa = { version = "=0.0.7", path = "libcrux-ml-dsa" }
libcrux-ml-kem = { version = "=0.0.7", path = "libcrux-ml-kem", default-features = false }
libcrux-p256 = { version = "=0.0.6", path = "crates/algorithms/p256", default-features = false }
libcrux-platform = { version = "=0.0.3", path = "crates/sys/platform" }
libcrux-psq = { version = "=0.0.7", path = "libcrux-psq" }

# Utilities
libcrux-secrets = { version = "=0.0.5", path = "crates/utils/secrets" }
libcrux-sha2 = { version = "=0.0.6", path = "crates/algorithms/sha2" }
libcrux-sha3 = { version = "=0.0.7", path = "crates/algorithms/sha3" }
libcrux-traits = { version = "=0.0.6", path = "traits" }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
bench = false                               # so libtest doesn't eat the arguments for criterion

[features]
default = ["std", "all"]
std = []
rand = []
wasm = ["wasm-bindgen", "getrandom"]
tests = []                                                  # Expose functions for testing.
experimental = []                                           # Expose experimental APIs.
all = ["all_algorithms", "all_primitives", "all_protocols"]

# Algorithms
all_algorithms = [
    "aes_gcm",
    "blake2",
    "chacha20_poly1305",
    "curve25519",
    "ed25519",
    "p256_ecdh",
    "p256_ecdsa",
    "sha2",
    "sha3",
    "hkdf",
    "hmac",
]
aes_gcm = []
blake2 = []
chacha20_poly1305 = []
curve25519 = []
ed25519 = []
p256_ecdh = []
p256_ecdsa = []
sha2 = []
sha3 = []
hkdf = []
hmac = []

# Primitives
all_primitives = ["aead", "digest", "kem"]
aead = []
digest = []
kem = []

# Protocols
all_protocols = ["hpke", "psq"]
hpke = []
psq = []

[dependencies]
getrandom = { version = "0.3", optional = true }

# Proofs
hax-lib.workspace = true

# External Cryspen code.
hpke-rs = { version = "0.5", features = ["libcrux"] }

# Primitives
libcrux-aead.workspace = true
libcrux-aesgcm.workspace = true
libcrux-blake2.workspace = true

# Algorithms
libcrux-chacha20poly1305.workspace = true
libcrux-curve25519.workspace = true
libcrux-digest.workspace = true
libcrux-ecdh.workspace = true
libcrux-ecdsa.workspace = true
libcrux-ed25519.workspace = true
libcrux-hkdf.workspace = true
libcrux-hmac.workspace = true
libcrux-kem.workspace = true
libcrux-ml-kem.workspace = true
libcrux-p256.workspace = true

# Protocols
libcrux-psq.workspace = true
libcrux-sha2.workspace = true
libcrux-sha3.workspace = true

# WASM API
wasm-bindgen = { version = "0.2.87", optional = true }

[build-dependencies]
libcrux-platform = { version = "=0.0.3", path = "crates/sys/platform" }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
libcrux = { path = ".", features = ["rand", "tests"] }
pretty_env_logger = "0.5"
rand = { version = "0.9" }
rand_chacha = { version = "0.9.0", features = ["os_rng"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.3" }
wasm-bindgen-test = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# XXX: Not needed anymore, but nice for test speed
# [profile.dev.package."libcrux-ml-dsa"]
# opt-level = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(doc_cfg)',
    'cfg(simd128)',
    'cfg(simd256)',
    'cfg(aes_ni)',
] }
