[package]
name = "libcrux-aesgcm"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
description = "Libcrux AES-GCM implementation"
exclude = ["/proofs", "/c.sh", "/c.yaml", "/tests/tv", "tests/cavp.rs"]

[lib]
bench = false # so libtest doesn't eat the arguments to criterion

[dependencies]
libcrux-platform = { version = "0.0.2", path = "../sys/platform" }
libcrux-intrinsics = { version = "0.0.2", path = "../libcrux-intrinsics" }
hax-lib.workspace = true

[features]
simd128 = []
simd256 = []

[[bench]]
name = "aesgcm"
harness = false

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
rand = "0.8.5"
cavp = { version = "0.0.2-beta.2", path = "../cavp" }
pretty_env_logger = "0.5.0"
rand_core = { version = "0.6" }
aes-gcm = "0.10.3"
wycheproof = "0.6.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(eurydice)'] }
