[package]
name = "benchmarks"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
publish = false

[lib]
bench = false # so libtest doesn't eat the arguments for criterion

[dependencies]
rand = { version = "0.8" }

[dev-dependencies]
libcrux = { path = "../", features = ["rand", "tests"] }
libcrux-kem = { path = "../libcrux-kem", features = ["tests"] }
libcrux-ml-kem = { path = "../libcrux-ml-kem" }
rand_core = { version = "0.6" }
# Benchmarking "RustCrypto"
chacha20poly1305 = "0.10"
sha2 = "0.10"
x25519-dalek-ng = "1.1"
sha3 = "0.10"
p256 = { version = "0.13", features = ["ecdh"] }
# Benchmarking "Ring"
ring = "0.17"
# Benchmarking "Dalek X25519"
x25519-dalek = "2.0.1"
# Benchmarking "Dalek Ristretto"
curve25519-dalek = "4.1.2"

# We always link this on linux, even if it may not be built.
# We check that in the build instead.
[target.'cfg(all(target_arch = "x86_64", target_os = "linux", crypto_lib25519))'.dev-dependencies]
lib25519 = { path = "../sys/lib25519" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"
# libcrux-pqclean = { version = "0.0.2-alpha.1", path = "sys/pqclean" }
pqcrypto-kyber = { version = "0.8.0" }

# Benchmarking "OpenSSL"
# XXX: We don't do this for Windows or wasm right now.
#      x86 is usally a cross compilation where this won't work either.
[target.'cfg(all(not(windows), not(target_arch = "wasm32"), not(target_arch = "x86")))'.dev-dependencies]
openssl = "0.10"

[target.'cfg(all(not(target_os = "windows"), target_arch = "x86_64"))'.dev-dependencies]
libjade-sys = { version = "=0.0.2-beta.2", path = "../sys/libjade" }

[[bench]]
name = "sha2"
harness = false

[[bench]]
name = "sha3"
harness = false

[[bench]]
name = "x25519"
harness = false

[[bench]]
name = "p256"
harness = false

[[bench]]
name = "aead"
harness = false

[[bench]]
name = "hpke"
harness = false

[[bench]]
name = "drbg"
harness = false

[[bench]]
name = "kyber768"
harness = false
