[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "benchmarks"
publish = false
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = false # so libtest doesn't eat the arguments for criterion

[dependencies]
rand = { version = "0.9" }

[dev-dependencies]
libcrux = { path = "../", features = ["rand", "tests"] }
libcrux-chacha20poly1305 = { path = "../crates/algorithms/chacha20poly1305" }
libcrux-ecdh = { path = "../libcrux-ecdh" }
libcrux-ecdsa = { path = "../crates/algorithms/ecdsa" }
libcrux-ed25519 = { path = "../crates/algorithms/ed25519" }
libcrux-kem = { path = "../libcrux-kem", features = ["tests"] }
libcrux-ml-kem = { path = "../libcrux-ml-kem" }
libcrux-rsa = { path = "../crates/algorithms/rsa" }
libcrux-sha2 = { path = "../crates/algorithms/sha2" }

rand_core = { version = "0.9" }
rand_core_old = { version = "0.6", package = "rand_core" }

# Benchmarking "RustCrypto"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdh"] }
sha2 = "0.10"
sha3 = "0.10"
x25519-dalek-ng = "1.1"

# Benchmarking "Ring"
ring = "0.17"

# For inputs to `ring` ed25519 verification
rsa = { version = "0.9.7", features = ["sha2"] }
untrusted = "0.9.0"

# Benchmarking "Dalek X25519"
x25519-dalek = "2.0.1"

# Benchmarking "Dalek Ristretto"
curve25519-dalek = "4.1.2"

# helpers needed for key conversion
der = "0.7"
pkcs1 = "0.7.5"

# We always link this on linux, even if it may not be built.
# We check that in the build instead.
[target.'cfg(all(target_arch = "x86_64", target_os = "linux", crypto_lib25519))'.dev-dependencies]
lib25519 = { path = "../crates/sys/lib25519" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8"
# libcrux-pqclean = { version = "0.0.2-alpha.1", path = "sys/pqclean" }
pqcrypto-kyber = { version = "0.8.0" }

# Benchmarking "OpenSSL"
# XXX: We don't do this for Windows or wasm right now.
#      x86 is usally a cross compilation where this won't work either.
[target.'cfg(all(not(windows), not(target_arch = "wasm32"), not(target_arch = "x86")))'.dev-dependencies]
openssl = "0.10"

[target.'cfg(all(not(target_os = "windows"), target_arch = "x86_64"))'.dev-dependencies]
libjade-sys = { version = "=0.0.2", path = "../crates/sys/libjade" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(crypto_lib25519)'] }

[[bench]]
harness = false
name = "sha2"

[[bench]]
harness = false
name = "sha3"

[[bench]]
harness = false
name = "x25519"

[[bench]]
harness = false
name = "p256"

[[bench]]
harness = false
name = "chacha20poly1305"

[[bench]]
harness = false
name = "ed25519"

[[bench]]
harness = false
name = "mlkem768"

[[bench]]
harness = false
name = "rsa"

[[bench]]
harness = false
name = "ecdsa_p256"
