[package]
name = "bit-playground"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
libcrux-intrinsics = {path = "../libcrux-intrinsics"}
libcrux-ml-kem = {path = "../libcrux-ml-kem"}
rand = "0.8.5"
