[package]
name = "libcrux-blake2"
description = "Formally verified blake2 hash library"

version = "0.0.3"
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[features]
std = []
default = ["std"]

[dependencies]
libcrux-hacl-rs = { version = "=0.0.2", path = "../hacl-rs/" }
libcrux-macros = { version = "=0.0.2", path = "../macros" }
