[package]
name = "libcrux-blake2"
description = "Formally verified blake2 hash library"
version = "0.0.3-alpha.1"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[features]
std = []
default = ["std"]

[dependencies]
libcrux-hacl-rs = { version = "=0.0.3-alpha.1", path = "../hacl-rs/" }
libcrux-macros = { version = "=0.0.3-alpha.1", path = "../macros" }

[dev-dependencies]
criterion = "0.6"
rand = "0.9"

[[bench]]
name = "blake2"
harness = false
