[package]
name = "libcrux-blake2"
description = "Formally verified blake2 hash library"
version = "0.0.3"
readme = "Readme.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true

[features]
std = []
default = ["std"]

[dependencies]
libcrux-hacl-rs = { version = "=0.0.3", path = "../hacl-rs/" }
libcrux-macros = { version = "=0.0.3", path = "../macros" }

[dev-dependencies]
criterion = "0.7"
rand = "0.9"

[[bench]]
name = "blake2"
harness = false
