[package]
name = "cavp"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
description = "Libcrux helper to read NIST CAVP test vectors."

[dependencies]
hex = "0.4.3"
log = "0.4.22"

[dev-dependencies]
pretty_env_logger = "0.5.0"
