[package]
name = "libcrux-curve25519"
description = "Formally verified curve25519 ECDH library"
version = "0.0.4"
readme = "Readme.md"

authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
libcrux-hacl-rs = { version = "=0.0.4", path = "../hacl-rs/" }
libcrux-macros = { version = "=0.0.3", path = "../macros" }
libcrux-traits = { version = "=0.0.4", path = "../traits" }
libcrux-secrets = { version = "=0.0.4", path = "../secrets" }

[features]
# Checking secret independence
check-secret-independence = [
    "libcrux-secrets/check-secret-independence",
    "libcrux-traits/check-secret-independence",
]

[dev-dependencies]
libcrux-traits = { version = "0.0.4", path = "../traits", features = [
    "generic-tests",
] }
