[package]
name = "libcrux-ecdsa"
description = "Formally verified ECDSA signature library"

version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
libcrux-p256 = { version = "=0.0.2-beta.2", path = "../p256", features = [
    "expose-hacl",
] }
libcrux-sha2 = { version = "=0.0.2-beta.2", path = "../sha2" }
rand = { version = "0.8", optional = true }

[features]
default = ["rand"]
rand = ["dep:rand"]

[dev-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
