[package]
name = "libcrux-ecdsa"
description = "Formally verified ECDSA signature library"
readme = "Readme.md"
version = "0.0.3"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
libcrux-p256 = { version = "=0.0.3", path = "../p256", features = [
    "expose-hacl",
] }
libcrux-sha2 = { version = "=0.0.3", path = "../sha2" }
rand = { version = "0.9", optional = true, default-features = false }

[features]
default = ["rand", "std"]
rand = ["dep:rand"]
std = ["rand?/std"]

[dev-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
