[package]
name = "libcrux-ed25519"
description = "Formally verified ed25519 signature library"
version = "0.0.3-alpha.3"
readme = "Readme.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
libcrux-hacl-rs = { version = "=0.0.3-alpha.3", path = "../hacl-rs/" }
libcrux-sha2 = { version = "=0.0.3-alpha.3", path = "../sha2", features = [
    "expose-hacl",
] }
libcrux-macros = { version = "=0.0.3-alpha.3", path = "../macros" }
rand_core = { version = "0.9", optional = true }

[dev-dependencies]
rand = { version = "0.9" }
wycheproof = "0.6.0"

[features]
rand = ["dep:rand_core"]
