[package]
name = "libcrux-ed25519"
description = "Formally verified ed25519 signature library"
version = "0.0.3"
readme = "Readme.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
libcrux-hacl-rs = { version = "=0.0.3", path = "../hacl-rs/" }
libcrux-sha2 = { version = "=0.0.3", path = "../sha2", features = [
    "expose-hacl",
] }
libcrux-macros = { version = "=0.0.3", path = "../macros" }
libcrux-traits = { version = "=0.0.3", path = "../traits" }
libcrux-secrets = { version = "=0.0.3", path = "../secrets" }

rand_core = { version = "0.9", optional = true }
tls_codec = { version = "0.4.2", features = ["derive"], optional = true }

[dev-dependencies]
rand = { version = "0.9" }
wycheproof = "0.6.0"

[features]
rand = ["dep:rand_core"]
codec = ["tls_codec/std"]
check-secret-independence = [
    "libcrux-traits/check-secret-independence",
    "libcrux-secrets/check-secret-independence",
]
