[package]
name = "libcrux-fuzz"
version = "0.0.0"
authors = ["Cryspen"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand = { version = "0.8" }

[dependencies.libcrux]
path = "../"
features = ["tests"]

[[bin]]
name = "kyber768_implicit_rejection"
path = "fuzz_targets/kyber768_implicit_rejection.rs"
test = false
doc = false
harness = false
bench = false

[[bin]]
name = "kyber1024_implicit_rejection"
path = "fuzz_targets/kyber1024_implicit_rejection.rs"
test = false
doc = false
harness = false
bench = false

[[bin]]
name = "hpke"
path = "fuzz_targets/hpke.rs"
test = false
doc = false
harness = false
bench = false

[[bin]]
name = "mlkem_pk_validation"
path = "fuzz_targets/mlkem_pk_validation.rs"
test = false
doc = false
