[package]
name = "libcrux-curve25519"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["portable_hacl"]
portable_hacl = ["hacl"]
hacl = ["dep:libcrux-sha2", "dep:libcrux-hacl-rs", "dep:krml"]

[dependencies]
libcrux-hacl-rs = { path = "../libcrux-hacl-rs/", optional = true }
libcrux-sha2 = { path = "../libcrux-sha2", optional = true, features = [
  "hacl",
] }
krml = { package = "libcrux-hacl-rs-krml", path = "../libcrux-hacl-rs-krml", optional = true }
