[package]
name = "libcrux-ecdh"
version = "0.0.3-alpha.1"
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
description = "Libcrux ECDH implementation"

[lib]
path = "src/ecdh.rs"

[dependencies]
rand = { version = "0.9", default-features = false }
libcrux-curve25519 = { version = "=0.0.2", path = "../curve25519" }
libcrux-p256 = { version = "=0.0.3-alpha.1", path = "../p256", features = [
    "expose-hacl",
] }

[features]
default = ["std"]
std = ["rand/std"]

[dev-dependencies]
rand_core = { version = "0.9" , features = ["os_rng"]}
hex = { version = "0.4.3", features = ["serde"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.5"
